Bug: combat prompt text blinks out instead of fading out
Bug: Bleeding status effect goes upwards instead of downwards on partymember
Bug: Fix the fraeking toastPanels
Bug: Went from tombsGreyWastes to LargeTomb
Feature: Tutorial
    - Make a tutorial greyhide
    - For now just make text prompt tell player what to do next
    - Make it so UI slowly lights up
    - Make toastpanel say partyMember joined you
    - Set player to level 0 at the start (first fight with greyhide will level them up, allowing them their first skill point)
Fix: Make it when tabMAnager !!, they bright white
Fix: Make eventdescription fade on hover (implemented but not enabled cause buggy)
Fix: The min/max in bars breaks for 3 digit mins and maxs
Bug: EventDisplay sizing and HidefromThePack size was wrong
Fix: Add smart item selection

CURRENTLY DOING
---------------
Feature: Companionship
    - Make it so partyMembers can talk about recent stuff at none events
    - Replace "friend" text with name text of companion
Bug: Don't let them cast on dead person
Bug: Don't let party member buff attacks get cast on monsters
Bug: Tutorial slightly broken if you don't click all buttons
Fix: add hover to stats

Bug: Candlemancy kinda broken 
Fix: status effects don't display in the statusPanel
Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: Make status effects do the fade animation monster displays do
Fix: Add candle usages to the help tip
Fix: Keep a counter for player's candle inventory
Fix: Tiny arrow to swap party member
Bug: Combat prompt was weird at the start
Bug: Non-tutorial runs don't start with starting gear

NEAR FUTURE
----------------
Feature: Sound effects and music
Feature: Saving
Feature: Ending and beginning cutscenes

FUTURE/MAYBE
------------
Fix: Add heal/focus animations on effect
Future: Add combat order on the side
Future: Animation skip on click
Tutorial: Clicking actions progresses the tutorial, but this might not be the worst thing




