@@ -24,7 +24,7 @@ namespace General {
         public Camera mainCamera { get; private set; }  /// <value> Cached main camera reference for performance </value>
         public GameDB DB { get; set; }                  /// <value> Access to database to fetch and store information </value>
         public string areaName { get; set; }            /// <value> Name of area being explored </value>
-        public bool isTutorial = true;                  /// <value> Flag for if the tutorial is enabled </value>
+        public bool isTutorial = true;                  /// <value> Flag for if the tutorial is enabled (has to be changed from editor) </value>
         public bool isTips = true;                      /// <value> Flag for if helpful tips should show up when possible </value>
 
         private string activeScene = "";                /// <value> Current scene being displayed </value>
